# nsk-release

./: CMakeLists.txt  CMakeListsLinux.txt  README.md
assets/: title.txt
cpp/: SfmlServ.cpp  deck.cpp  jcpu.cpp  jeu.cpp  joueur.cpp  network.cpp  partie.cpp  partieSfml.cpp
cpp/server/: server.cpp
header/: SfmlServ.h  affichage.h  deck.h  jcpu.h  jeu.h  joueur.h  network.h  partie.h  partieSfml.h
server/: server.cpp
sith/: acceuil.html  equipe.html  style.css  sujet.html
